--- a/example/style.css
+++ b/example/style.css
@@ -18,7 +18,7 @@ video {
     position: relative;
     align-items: center;
     width: 100%;
-    height: 65vh;
+    height: 600px;
     box-sizing: border-box;
     background-color: black;
 }
