--- a/example/style.css
+++ b/example/style.css
@@ -22,3 +22,13 @@ video {
     box-sizing: border-box;
     background-color: black;
 }
+
+.glass {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 48px;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: grayscale(30%);
+}
