--- a/src/shared/scss/variables.scss
+++ b/src/shared/scss/variables.scss
@@ -1,10 +1,15 @@
+$primary300: #03A9F4;
 $primary500: #2B78E0;
 $primary700: #135DC1;
+$background300: rgb(49, 63, 82);
 $background500: #242C36;
 $input500: #151A20;
 $input700: #0B0D10;
 $textPrimary: rgba($color: white, $alpha: 0.9);
+$textPrimarySolid: #E9E9EB;
 $textSecondary: rgba($color: white, $alpha: 0.48);
+$textSecondarySolid: rgb(165, 170, 177);
+$divider: rgba($color: white, $alpha: 0.12);
 
 
 $shadow-1: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
