--- a/src/popup/index.scss
+++ b/src/popup/index.scss
@@ -1,9 +1,18 @@
 body {
-    overflow-y: hidden;
-    background-color: #242C36;
+  overflow-y: auto;
+  background-color: #242c36;
+  margin: 0;
+  padding: 32px 40px;
 }
 
-html, body {
-    min-width: 350px;
-    max-width: 550px;
+html,
+body * {
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  max-width: 550px;
+  max-width: 1000px;
 }
