Added error message

--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -1,10 +1,15 @@
 $primary300: #03a9f4;
 $primary500: #2b78e0;
 $primary700: #135dc1;
+
 $background300: rgb(49, 63, 82);
 $background500: #242c36;
+
+$red300: #ef5350;
+
 $input500: #151a20;
 $input700: #0b0d10;
+
 $textPrimary: rgba(
   $color: white,
   $alpha: 0.9,
