--- a/src/common/shared.scss
+++ b/src/common/shared.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Overpass:400,500,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Overpass:400,500,800&display=swap');
 
 body * {
   font-family: 'Overpass', sans-serif;
@@ -16,7 +16,7 @@ a {
   height: 36px;
   padding: 0 12px;
   padding-top: 2px;
-  font-weight: 700px;
+  font-weight: 800;
   font-size: 14px;
   box-sizing: border-box;
   text-transform: uppercase;
