--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -6,6 +6,8 @@ $background300: rgb(49, 63, 82);
 $background500: #242c36;
 
 $red400: #ef5350;
+$red500: #f44336;
+$red700: #d32f2f;
 
 $input500: #151a20;
 $input700: #0b0d10;
