MVP implemnetation for adding and editing timestmaps

--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -2,6 +2,8 @@ $primary300: #03a9f4;
 $primary500: #2b78e0;
 $primary700: #135dc1;
 
+$secondary500: #673ab7;
+
 $background300: rgb(49, 63, 82);
 $background500: #242c36;
 
@@ -19,7 +21,7 @@ $textPrimary: rgba(
 $textPrimarySolid: #e9e9eb;
 $textSecondary: rgba(
   $color: white,
-  $alpha: 0.48,
+  $alpha: 0.6,
 );
 $textSecondarySolid: rgb(165, 170, 177);
 $divider: rgba(
