--- a/src/common/shared.scss
+++ b/src/common/shared.scss
@@ -6,8 +6,11 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: local('Overpass Light'), local('Overpass-Light'), url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kOcc7D4howig.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: local('Overpass Light'), local('Overpass-Light'),
+    url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kOcc7D4howig.woff2)
+      format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
+    U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -15,8 +18,10 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: local('Overpass Light'), local('Overpass-Light'), url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kOcc7N4ho.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local('Overpass Light'), local('Overpass-Light'),
+    url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kOcc7N4ho.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
+    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
 @font-face {
@@ -24,8 +29,10 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Overpass Regular'), local('Overpass-Regular'), url(https://fonts.gstatic.com/s/overpass/v4/qFdH35WCmI96Ajtm81GrU9vyww.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: local('Overpass Regular'), local('Overpass-Regular'),
+    url(https://fonts.gstatic.com/s/overpass/v4/qFdH35WCmI96Ajtm81GrU9vyww.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
+    U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -33,8 +40,10 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Overpass Regular'), local('Overpass-Regular'), url(https://fonts.gstatic.com/s/overpass/v4/qFdH35WCmI96Ajtm81GlU9s.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local('Overpass Regular'), local('Overpass-Regular'),
+    url(https://fonts.gstatic.com/s/overpass/v4/qFdH35WCmI96Ajtm81GlU9s.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
+    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
 @font-face {
@@ -42,8 +51,11 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: local('Overpass ExtraBold'), local('Overpass-ExtraBold'), url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kCdc7D4howig.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: local('Overpass ExtraBold'), local('Overpass-ExtraBold'),
+    url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kCdc7D4howig.woff2)
+      format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
+    U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -51,8 +63,10 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: local('Overpass ExtraBold'), local('Overpass-ExtraBold'), url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kCdc7N4ho.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local('Overpass ExtraBold'), local('Overpass-ExtraBold'),
+    url(https://fonts.gstatic.com/s/overpass/v4/qFdA35WCmI96Ajtm81kCdc7N4ho.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
+    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 // Globals
@@ -80,7 +94,8 @@ a {
   cursor: pointer;
 }
 
-.clickable {
+.clickable,
+.focusable {
   color: rgba(255, 255, 255, 0.9);
   background-color: #2b78e0;
   transform: translateY(-3px);
@@ -94,7 +109,8 @@ a {
     box-shadow: 0 5px 0 0 #135DC1;
 } */
 
-.clickable.dark {
+.clickable.dark,
+.focusable.dark {
   background-color: #151a20;
   box-shadow: 0 3px 0 0 #0b0d10;
 }
@@ -105,13 +121,17 @@ a {
 } */
 
 .clickable.down,
-.clickable.focus:active:hover {
+.clickable.focus:active:hover,
+.focusable:focus-within,
+.focusable:focus {
   transform: translateY(0);
   box-shadow: 0 0 0 0 #135dc1;
 }
 
 .clickable.dark.down,
-.clickable.dark.focus:active:hover {
+.clickable.dark.focus:active:hover,
+.focusable.dark:focus-within,
+.focusable.dark:focus {
   transform: translateY(0);
   box-shadow: 0 0 0 0 #0b0d10;
 }
