--- a/src/common/shared.scss
+++ b/src/common/shared.scss
@@ -158,6 +158,9 @@ a {
 .clickable.disabled {
   pointer-events: none;
   cursor: pointer;
+  transform: translateY(0);
+  box-shadow: 0 0 0 0 transparent;
+  opacity: 0.48;
 }
 
 .error-message {
