--- a/src/common/shared.scss
+++ b/src/common/shared.scss
@@ -81,6 +81,17 @@ a {
   color: #2b78e0;
 }
 
+// prettier-ignore
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
 .button {
   border: none;
   outline: none;
