Reduced size of web login tab

--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -2,7 +2,7 @@ $primary300: #03a9f4;
 $primary500: #2b78e0;
 $primary700: #135dc1;
 
-$secondary500: #673ab7;
+$secondary500: #8a50f0;
 
 $background300: rgb(49, 63, 82);
 $background500: #242c36;
