--- a/example/style.css
+++ b/example/style.css
@@ -1,33 +1,35 @@
-body, body * {
-    margin: 0;
-    padding: 0;
+body,
+body * {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #242C36;
+  background-color: #242c36;
 }
 
 video {
-    object-fit: contain;
-    height: 100%;
+  object-fit: contain !important;
+  height: 100% !important;
+  max-width: unset !important;
 }
 
 .video-container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    align-items: center;
-    width: 100%;
-    height: 600px;
-    box-sizing: border-box;
-    background-color: black;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  width: 100%;
+  height: 600px;
+  box-sizing: border-box;
+  background-color: black;
 }
 
 .glass {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 48px;
-    background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 48px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
