feat: allow toggling players to switch quality/subtitle/audio settings in the original player
All styles are now scoped to inside the `.anime-skip-styles-root` class, thanks to postcss. This means our base tailwind styles will never effect the original player. If we are still able to find options, we will still include them in the popup like before.

--- a/src/common/styles/main.css
+++ b/src/common/styles/main.css
@@ -1,19 +1,6 @@
-html,
-body,
-#app {
+.anime-skip-remove-margin,
+.anime-skip-remove-margin body,
+.anime-skip-remove-margin #app {
   margin: 0;
   padding: 0;
-}
-
-.btn {
-  @apply px-4 py-1 rounded inline-block
-    bg-primary text-on-primary cursor-pointer
-    hover:bg-primary;
-}
-
-.icon-btn {
-  @apply inline-block cursor-pointer select-none
-    opacity-medium transition duration-200 ease-in-out
-    hover:opacity-100 hover:text-primary;
-  font-size: 0.9em;
 }
