--- a/src/content-scripts/services/crunchyroll/player-overrides.scss
+++ b/src/content-scripts/services/crunchyroll/player-overrides.scss
@@ -1,4 +1,4 @@
-.hide-for-anime-skip {
+.hide-for-anime-skip.crunchyroll {
   #velocity-overlay-package,
   #velocity-controls-package {
     display: none !important;
