--- a/src/content-scripts/services/funimation-2021-09-26/player-overrides.scss
+++ b/src/content-scripts/services/funimation-2021-09-26/player-overrides.scss
@@ -1,5 +1,5 @@
 // Hide the existing player
-.hide-for-anime-skip {
+.hide-for-anime-skip.funimation-2021-09-26 {
   #vjs_video_3 {
     .meta-overlay,
     .thumb-overlay,
