break out crunchyroll beta into separate service

--- a/src/content-scripts/services/crunchyroll/player-overrides.scss
+++ b/src/content-scripts/services/crunchyroll/player-overrides.scss
@@ -1,4 +1,5 @@
-.hide-for-anime-skip.crunchyroll {
+.hide-for-anime-skip.crunchyroll,
+.hide-for-anime-skip.crunchyroll-beta {
   #velocity-overlay-package,
   #velocity-controls-package {
     display: none !important;
