prefixed styles, fixed layouts

--- a/src/content-scripts/services/funimation-2021-09-26/player-overrides.scss
+++ b/src/content-scripts/services/funimation-2021-09-26/player-overrides.scss
@@ -3,6 +3,7 @@
   #vjs_video_3 {
     .meta-overlay,
     .thumb-overlay,
+    .mute-button,
     .vjs-poster,
     .vjs-control-bar,
     .vjs-loading-spinner,
