chore: Set and sync checkmark, playback rate, and theme preferences
The setting's don't do anything yet.

Also implemented a view renderer, eventually settings will be powered by JSON from the API.

--- a/packages/player/src/assets/tailwind.css
+++ b/packages/player/src/assets/tailwind.css
@@ -93,4 +93,13 @@
     top: 50%;
     transform: translateY(-50%);
   }
+  
+  .checkbox-pref:checked,
+  .checkbox-pref[checked='true'],
+  .checkbox-pref[aria-checked='true'] {
+    --chkbg: var(--b1);
+    --chkfg: var(--p);
+    border-color: hsl(var(--b1));
+    background-color: hsl(var(--b1));
+  }
 }
