feat: New theme `ZORO_GREEN`

--- a/packages/player/src/assets/tailwind.css
+++ b/packages/player/src/assets/tailwind.css
@@ -6,13 +6,29 @@
 
 @layer base {
   html {
-    --bc: 0 0% 100%; /* white */
+    --bc: 0 0% 100% !important; /* white for all themes */
   }
 
   /* Themed logo colors */
   html, html[data-theme=anime-skip] {
     --logo-primary: 199 100% 57%;
     --logo-secondary: 265 53% 58%;
+  }
+  html[data-theme=CRUNCHYROLL_ORANGE] {
+    --logo-primary: 42 96% 54%;
+    --logo-secondary: 24 91% 54%;
+  }
+  html[data-theme=VRV_YELLOW] {
+    --logo-primary: 52 100% 50%;
+    --logo-secondary: 22 100% 50%;
+  }
+  html[data-theme=FUNIMATION_PURPLE] {
+    --logo-primary: 216 83% 65%;
+    --logo-secondary: 246 83% 65%;
+  }
+  html[data-theme=ZORO_GREEN] {
+    --logo-primary: 72 80% 55%;
+    --logo-secondary: 41 94% 69%;
   }
 }
 
@@ -97,9 +113,9 @@
   .checkbox-pref:checked,
   .checkbox-pref[checked='true'],
   .checkbox-pref[aria-checked='true'] {
-    --chkbg: var(--b1);
+    --chkbg: var(--pc);
     --chkfg: var(--p);
-    border-color: hsl(var(--b1));
-    background-color: hsl(var(--b1));
+    border-color: hsl(var(--pc));
+    background-color: hsl(var(--pc));
   }
 }
