--- a/packages/player/src/assets/tailwind.css
+++ b/packages/player/src/assets/tailwind.css
@@ -54,6 +54,14 @@
     width: 2.25rem;
     height: 2.25rem;
   }
+  .btn.btn-lg {
+    height: 4rem;
+    min-height: 4rem;
+  }
+  .btn.btn-lg.btn-circle {
+    width: 4rem;
+    height: 4rem;
+  }
 
   .spinner {
       aspect-ratio: 1/1;
