feat: Capture screenshots

--- a/apps/extension/src/assets/crunchyroll-player.scss
+++ b/apps/extension/src/assets/crunchyroll-player.scss
@@ -1,4 +1,4 @@
-[anime-skip-visible] {
+[anime-skip-hide-builtin-player] {
   #velocity-overlay-package,
   #velocity-controls-package,
   [data-testid='skipButton'],
